[package]
name = "storage_server"
version = "0.1.0"
authors = ["Charles Bassett <chasb96@gmail.com>"]

[dependencies]
diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
chrono = {version  = "0.4.6", features = ["serde"] }
dotenv = "0.13.0"
bcrypt = "0.4.0"
time = "0.1.*"
lazy_static = "1.3.*"
r2d2 = "0.8.*"
r2d2_postgres = "0.14.*"
postgres = "0.15.*"
rocket = "0.4.1"
rocket_contrib = { version = "0.4.1", features = ["tera_templates"] }
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
frank_jwt = "3.1.*"
rocket-multipart-form-data = "*"
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
rand = "0.6.5"

[dependencies.fake]
version = "1.3.0"
features = ["chrono"]
